 9-Dec-2020 V0.68 Simplify API for PolymerEntityExtractor()
18-Jan-2021 V0.69 Update dependencies
25-Feb-2021 V0.70 Update with split out rcsb.utils.dictionary
18-Mar-2021 V0.71 Adjustments in initialization  UniProtExtractor()
13-May-2021 V0.72 Add minSeqLen argument to exportProteinEntityFasta()
24-May-2021 V0.73 Add BranchedEntityExtractor() and associated tests
26-May-2021 V0.74 Add modules GlycanProvider(), GlycanUtils() and associated tests
27-May-2021 V0.75 Implement GlyGen mapping in ReferenceSequenceAnnotationProvider and ReferenceSequenceAnnotationAdapter
28-May-2021 V0.76 Fix idempotent issue in ReferenceSequenceAnnotationAdapter()
30-May-2021 V0.77 Disable Pfam annotation from SIFTS
19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__
28-Jun-2021 V0.79 Add LigandNeighborMappingProvider() LigandNeighborMappingExtractor() and associated tests
30-Jun-2021 V0.80 Make GlycanProvider() a subclass of StashableBase(), add GlycanEtlWorkflow() and associated tests
30-Jun-2021 V0.81 Simplify install scripts and update pipeline configuration
26-Jul-2021 V0.82 Replace all explicit use of StashUtil with StashableBase subclasses
26-Jul-2021 V0.83 Add tree node lists for SCOP2 and ECOD
28-Jul-2021 V0.84 Update stash options for GlycanEtlWorkflow and PubChemEtlWrapper
29-Jul-2021 V0.85 Gracefully handle and report missing ligand_comp_id's in LigandNeighborMappingProvider()
 2-Aug-2021 V0.86 Adjust reporting intervals and diagnostic output and update dependencies and configuration
 4-Aug-2021 V0.87 Adjust logging verbosity and dependencies
22-Sep-2021 V0.88 Add modules EntryInfoProvider and EntryInfoEtlWorkflow and associated tests.
23-Sep-2021 V0.89 Update dependencies
 9-Feb-2022 V0.90 Enable http loading of SIFTS data
10-Feb-2022 V0.91 Adjust ReferenceSequenceAnnotationProvider & ReferenceSequenceCacheProvider; add computed-models to tests & WF