@@ -102,7 +102,7 @@ class ObjectExtractorTests(unittest.TestCase):
         """Test case - extract entries subject to date restriction"""
         try:
             tU = TimeUtil()
-            tS = tU.getTimestamp(useUtc=True, before={"days": 365 * 4})
+            tS = tU.getTimestamp(useUtc=True, before={"days": 365 * 4 + 20})
             tD = tU.getDateTimeObj(tS)
             obEx = ObjectExtractor(
                 self.__cfgOb,
@@ -114,8 +114,10 @@ class ObjectExtractorTests(unittest.TestCase):
                 selectionQuery={"rcsb_accession_info.initial_release_date": {"$gt": tD}},
                 selectionList=["rcsb_id", "rcsb_accession_info"],
             )
+            eD = obEx.getObjects()
             eCount = obEx.getCount()
-            logger.info("Entry count ifs %d", eCount)
+            logger.info("Entry count is %d", eCount)
+            logger.info("Entries are %r", list(eD.keys()))
             self.assertGreaterEqual(eCount, 6)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
