@@ -80,4 +80,6 @@
 22-Sep-2021 V0.88 Add modules EntryInfoProvider and EntryInfoEtlWorkflow and associated tests.
 23-Sep-2021 V0.89 Update dependencies
  9-Feb-2022 V0.90 Enable http loading of SIFTS data
-10-Feb-2022 V0.91 Adjust ReferenceSequenceAnnotationProvider & ReferenceSequenceCacheProvider; add computed-models to tests & WF
+29-Mar-2022 V0.91 Adjust ReferenceSequenceAnnotationProvider & ReferenceSequenceCacheProvider,
+                  add computed-models to tests & workflow,
+                  fix test case in testObjectExtractor
